--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,7 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  align-items: center;
 }
 
 .saveBtn i:hover {
