--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,10 +63,13 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  font-size: 25px;
+  width: 100%;
+  height: 100%;
 }
 
 .saveBtn i:hover {
-  font-size: 20px;
+  font-size: 35px;
   transition: all .3s ease-in-out;
 }
 
@@ -74,4 +77,10 @@ textarea{
 
   margin-bottom: 0%;
 
+}
+
+.p-save {
+
+  width: 100%;
+  height: 100%;
 }
